--- a/Urls/cisf_login_direct.html
+++ b/Urls/cisf_login_direct.html
@@ -2,7 +2,7 @@
 <html>
    <head>
     
-      <meta http-equiv = "refresh" content = "1; url = http://164.100.43.36/empcorner/android_demo/login.php" />
+      <meta http-equiv = "refresh" content = "1; url = http://164.100.43.36/empcorner/android_demo" />
    </head>
   
 </html>
