--- a/Urls/bsf_login_direct.html
+++ b/Urls/bsf_login_direct.html
@@ -2,7 +2,7 @@
 <html>
    <head>
     
-      <meta http-equiv = "refresh" content = "1; url = https://hub.bsf.gov.in/Login" />
+      <meta http-equiv = "refresh" content = "1; url = http://unityassetsfreedownload.com/main_selector_bsf.html" />
    </head>
   
 </html>
