--- a/Urls/crpf_login_direct.html
+++ b/Urls/crpf_login_direct.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<meta http-equiv = "refresh" content = "1; url = http://164.100.194.110:81/LoginPage.aspx" />
+<meta http-equiv = "refresh" content = "1; url = http://unityassetsfreedownload.com/main_selector_crpf.html" />
   
   
   <style>
