--- a/Privacy Policy/wallpaper_offline_privacy_policy.html
+++ b/Privacy Policy/wallpaper_offline_privacy_policy.html
@@ -35,7 +35,7 @@
 
   
    <h2>Privacy Policy</h2> <p>
-                    indkarbalapps built the  Girly Wallpaper Backgrounds app as
+                    indkarbalapps built the Wallpaper app as
                     a Free app. This SERVICE is provided by
                     indkarbalapps at no cost and is intended for
                     use as is.
@@ -55,7 +55,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-               Girly Wallpaper Backgrounds  App unless otherwise defined in this Privacy
+                Wallpaper   App unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
